# encodeworkflow

./: .gitignore  .windsurfrules  README.md  build_ffmpeg.sh  build_ffmpeg_debian.sh  build_ffmpeg_mac.sh  build_ffmpeg_static.sh  create_srt.py  create_srt.sh  create_testclips.sh  encode.sh  encode_audio_functions.sh  encode_config.sh  encode_formatting.sh  encode_hardware_acceleration.sh  encode_processing.sh  encode_subtitle_functions.sh  encode_utilities.sh  encode_validation.sh  encode_video_functions.sh  extract_mp3.sh  fedora_toolbox.sh  hbencode.sh
python/drapto/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/drapto/src/drapto/: __init__.py  audio_processor.py  cli.py  config.py  core.py  default_config.py  encoder.py  formatting.py  path_manager.py  segment_handler.py  validation.py  video_processor.py  work_manager.py
python/drapto/src/drapto/config/: __init__.py  config.py  default_config.py
python/drapto/src/drapto/core/: __init__.py  base.py  hardware.py
python/drapto/src/drapto/docs/: architecture.md  error_handling.md  refactoring_design.md  testing_strategy.md
python/drapto/src/drapto/encoding/: __init__.py  base.py  chunked.py  dolby_vision.py  factory.py  (+2 more)
python/drapto/tests/: conftest.py  test_encoding_state.py
python/drapto/tests/core/: test_hardware.py
python/drapto/tests/encoding/: __init__.py  conftest.py  test_base.py  test_chunked.py  test_dolby_vision.py  test_factory.py  test_video_analysis.py
python/drapto/tests/integration/: test_bash_scripts.py
python/drapto/tests/monitoring/: __init__.py  test_base.py
python/drapto/tests/unit/: test_cli.py  test_core.py
(+74 files in other folders)
