[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drapto"
version = "0.1.0"
description = "Python wrapper for video encoding bash scripts"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
drapto = "drapto.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drapto"]

[tool.hatch.build.targets.wheel.force-include]
"src/drapto/scripts" = "drapto/scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=drapto"
